# ex_embedded_shared

./: Cargo.toml  Firmware.code-workspace
.cargo/: config.toml
src/: main.rs
