[package]
name = "ex_embedded_shared"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-Globus-Proprietary"


[[bin]]
name = "ex_embedded_shared"
path = "src/main.rs"
test = true
bench = false

[features]
default = []
use_semihosting = []

[dependencies]
arduino_mkrzero = "0.12.2"
cortex-m = "0.7"
cortex-m-rtic = "1.0"
embassy-sync = "0.6.2"
panic-halt = "0.2"
panic-semihosting = "0.5"
usb-device = "0.2"
usbd-serial = "0.1"

# Default profile
[profile.dev]
debug = true # debug symbols

# Release profile
[profile.release]
codegen-units = 1 # better optimizations
lto = true        # better optimizations
strip = true      # remove debug symbols
